<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    android:layout_width="match_parent"
        android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".ui.home.view.tab_fragment.CustomMessageFragment">

    <LinearLayout
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
        >


    <TextView
        android:id="@+id/tvAddNewMsg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_new_message"
        android:textAllCaps="true"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginVertical="@dimen/_10sdp"
        android:textColor="@color/white"
        android:fontFamily="@font/inter_medium"
        android:textSize="@dimen/_11ssp"
        android:layout_margin="@dimen/_15sdp"

        />

     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="@dimen/_15sdp"

         >


    <ImageView
        android:id="@+id/imgMsg"
        android:layout_width="@dimen/_25sdp"
        android:layout_height="@dimen/_25sdp"
        android:layout_alignParentStart="true"
        android:src="@drawable/img_message_box"
        android:layout_centerVertical="true"

        />


    <EditText
        android:id="@+id/etAddNewMsg"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_35sdp"
        android:background="@color/transparent"
        android:fontFamily="@font/inter_medium"
        android:hint="Enter your message"
        android:maxLength="30"

        android:textColorHint="@color/last_circle_color"
        android:text=""
        android:layout_centerVertical="true"
        android:textColor="@color/white"
        android:textSize="@dimen/_11ssp"
        android:layout_marginHorizontal="@dimen/_5sdp"
         android:layout_toEndOf="@id/imgMsg"
        android:layout_toStartOf="@id/tvCount"
        />


    <TextView
        android:id="@+id/tvCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0/30"
        android:layout_marginLeft="@dimen/_5sdp"
        android:layout_marginRight="@dimen/_8sdp"
        android:textColor="@color/yellow"
        android:layout_alignParentRight="true"
       android:layout_centerVertical="true"
        />



     </RelativeLayout>




            <TextView
                android:id="@+id/tvAddCustomMessage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/etAddNewMsg"
                android:paddingHorizontal="@dimen/_10sdp"
                android:text="@string/add_custom_message"
                android:paddingVertical="@dimen/_5sdp"

                 android:textColor="@color/white"
                android:layout_marginVertical="@dimen/_5sdp"
                android:layout_marginHorizontal="@dimen/_15sdp"
                android:backgroundTint="@color/blue_custom_"
                android:background="@drawable/background_tab_gradient"
 android:alpha="0.5"
                />




    <TextView
        android:id="@+id/tvRecentMsg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/recent_messages"
        android:textAllCaps="true"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvAddCustomMessage"
        android:layout_marginVertical="@dimen/_10sdp"
        android:textColor="@color/white"
        android:fontFamily="@font/inter_medium"
        android:textSize="@dimen/_11ssp"
        android:layout_marginHorizontal="@dimen/_15sdp"

        />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvRecentMsg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvRecentMsg"
        android:layout_marginHorizontal="@dimen/_15sdp"
        tools:listitem="@layout/item_message"
        tools:itemCount="3"
        />
    <TextView
        android:id="@+id/tvAllMsg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="All (89)"
        android:textAllCaps="true"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rvRecentMsg"
        android:layout_marginTop="@dimen/_15sdp"
        android:textColor="@color/white"
        android:layout_marginBottom="@dimen/_10sdp"
        android:fontFamily="@font/inter_medium"
        android:textSize="@dimen/_11ssp"
        android:layout_marginHorizontal="@dimen/_15sdp"

        />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvAllMsg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_15sdp"
             app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvAllMsg"
            app:layout_constraintBottom_toBottomOf="parent"

            tools:itemCount="3"
            tools:listitem="@layout/item_message" />


 </LinearLayout>
    </androidx.core.widget.NestedScrollView>




<!--</androidx.core.widget.NestedScrollView>-->